codepkg/objects/zPaper_Affiliation__c.object
<CustomObject>
    <fields>
        <fullName>Clinic__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Clinic</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>zPaper Affilitation (Clinic)</relationshipLabel>
        <relationshipName>zPaper_Fax_Aff_Clinic</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <formula>Clinic__r.Fax</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fax</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SentFax__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked whenever a document is sent</description>
        <label>Sent Document</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VAC__c</fullName>
        <description>Vascular Access Center</description>
        <label>Vascular Access Center</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>zPaper_VAC_Aff</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>faxType__c</fullName>
        <description>Updated with the Doc Type of the last document received, if the doc type is indicated</description>
        <label>Document Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>latestFax__c</fullName>
        <description>Updated with the transaction Date/Time any time a document is sent or received</description>
        <label>Latest Document</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>newFax__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked any time a new document is received</description>
        <label>New Document</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>outboundFaxTemplate__c</fullName>
        <description>Used for sending XML information to the zPaper Outbound Message Agent as part of a Salesforce Flow</description>
        <label>Outbound Fax Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>producedID__c</fullName>
        <description>Updated with the zPaper database ID of the received document when a document is received and associated with the record in question</description>
        <label>Produced ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>receivedID__c</fullName>
        <description>Updated with the zPaper database ID of the sent document when a document is sent from the record in question</description>
        <label>Received ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sendAgain__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for time triggered faxing</description>
        <label>Send Again</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sentFaxAt__c</fullName>
        <description>Updated with the transaction Date/Time any time a document is sent</description>
        <label>Sent Document At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sentFaxStatus__c</fullName>
        <description>Updated when the status of an outbound delivery attempt is know. Value is either &quot;Sent&quot; or &quot;Failed&quot; plus the failure reason</description>
        <label>Sent Document Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sentFaxTo__c</fullName>
        <description>Updated with the destination of the sent document when an outbound fax is attempted</description>
        <label>Sent Document To</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>zPaper Affiliation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Clinic__c</columns>
        <columns>VAC__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>American_Access_Care_of_Bellmore_LLC</fullName>
        <columns>Clinic__c</columns>
        <columns>NAME</columns>
        <columns>VAC__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>VAC__c</field>
            <operation>contains</operation>
            <value>American Access Care of Bellmore</value>
        </filters>
        <label>American Access Care of Bellmore</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>American_Access_Care_of_Brooklyn_LLC</fullName>
        <columns>Clinic__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>VAC__c</field>
            <operation>contains</operation>
            <value>American Access Care of Brooklyn</value>
        </filters>
        <label>American Access Care of Brooklyn</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>American_Access_Care_of_New_Jersey_LLC</fullName>
        <columns>Clinic__c</columns>
        <columns>NAME</columns>
        <columns>VAC__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>VAC__c</field>
            <operation>contains</operation>
            <value>American Access Care of New Jersey</value>
        </filters>
        <label>American Access Care of New Jersey</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>American_Access_Care_of_New_York_LLC</fullName>
        <columns>Clinic__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>VAC__c</field>
            <operation>contains</operation>
            <value>American Access Care of New York</value>
        </filters>
        <label>American Access Care of New York</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>American_Access_Care_of_Queens_LLC</fullName>
        <columns>Clinic__c</columns>
        <columns>VAC__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>VAC__c</field>
            <operation>equals</operation>
            <value>&quot;American Access Care of Queens, LLC&quot;</value>
        </filters>
        <label>American Access Care of Queens, LLC</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>American_Access_Care_of_Suffolk_County</fullName>
        <columns>Clinic__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>VAC__c</field>
            <operation>contains</operation>
            <value>American Access Care of Suffolk County</value>
        </filters>
        <label>American Access Care of Suffolk County</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>American_Access_Care_of_The_Bronx_LLC</fullName>
        <columns>Clinic__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>VAC__c</field>
            <operation>contains</operation>
            <value>American Access Care of The Bronx</value>
        </filters>
        <label>American Access Care of The Bronx</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Image_Guided_Surgery_Aesthetics</fullName>
        <columns>Clinic__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>VAC__c</field>
            <operation>equals</operation>
            <value>Image Guided Surgery &amp; Aesthetics</value>
        </filters>
        <label>Image Guided Surgery &amp; Aesthetics</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Interventional_Ambulatory_Center_of_Puer</fullName>
        <columns>Clinic__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>VAC__c</field>
            <operation>contains</operation>
            <value>Interventional Ambulatory Center of Puer</value>
        </filters>
        <label>Interventional Ambulatory Center of Puer</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Philadelphia_Vein_Vascular_South_PA</fullName>
        <columns>Clinic__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>VAC__c</field>
            <operation>equals</operation>
            <value>Philadelphia Vein &amp; Vascular at American Access Care of S. PA</value>
        </filters>
        <label>Philadelphia Vein &amp; Vascular - South PA</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Philadelphia_Vein_Vascular_at_American</fullName>
        <columns>Clinic__c</columns>
        <columns>VAC__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>VAC__c</field>
            <operation>equals</operation>
            <value>Philadelphia Vein &amp; Vascular at American Access Care of PA</value>
        </filters>
        <label>Philadelphia Vein &amp; Vascular at American</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Test</fullName>
        <columns>NAME</columns>
        <columns>VAC__c</columns>
        <columns>Clinic__c</columns>
        <columns>Fax__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Test</value>
        </filters>
        <label>Test</label>
        <language>en_US</language>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>Verona_Veins_at_Access_Care_Physicians</fullName>
        <columns>Clinic__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>VAC__c</field>
            <operation>contains</operation>
            <value>Verona Veins at Access Care Physicians of New Jersey</value>
        </filters>
        <label>Verona Veins at Access Care Physicians</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Verrazano_Vascular_Associates_SI</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>VAC__c</field>
            <operation>equals</operation>
            <value>Verrazano Vascular Associates</value>
        </filters>
        <label>Verrazano Vascular Associates - SI</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>zPaper_Fax Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>zPaper Affilitation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>